--- a/junit/students_template/pom.xml
+++ b/junit/students_template/pom.xml
@@ -86,6 +86,15 @@
             <version>5.7.0</version>
         </dependency>
 
+        
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-checkstyle-plugin</artifactId>
+            <version>3.1.2</version>
+        </dependency>
+
+
+
     </dependencies>
 
     <build>
