--- a/.github/workflows/students2.yml
+++ b/.github/workflows/students2.yml
@@ -7,17 +7,15 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        java-version: [ 8.0.241,11.0.3 ]
+
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK ${{ matrix.java-version }}
-      uses: actions/setup-java@v2
-      with:
-        java-version: ${{ matrix.java-version }}
-        distribution: 'zulu'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+     
+      - uses: joschi/setup-jdk@v2
+        with:
+          java-version: '8'
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+      
        
